--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -116,8 +116,37 @@ div.card div {
 }
 
 @media (max-width: 768px) {
+    
+    #experience>span {
+        font-size: 4rem;
+    }
+    
     div.card div {
+        padding: 0px!important;
         width: 90%;
     }
 
+    .block-card>ul {
+        padding: 20px!important;
+        margin-bottom: 20px!important;
+    }
+
+    .table tr {
+        display: flex    ;
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
+        border-bottom: 1px solid var(--color-border);
+    }
+
+    .table tr:nth-child(1) {
+        border-top: 1px solid var(--color-border);
+    }
+
+    #home>ul>li:nth-child(2) > ul {
+        width: 88%;
+        gap: 1rem;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
