--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -67,6 +67,15 @@
     margin: 0.5rem 0;
 }
 
+.w_h_icon {
+    width: 50px;
+    height: 50px;
+}
+
+.w_h_icon_small {
+    width: 24px;
+    height: 24px;
+}
 
 
 @media (max-width: 768px) {
